mock用户注册登录
