# docs/swagger.yaml
@@ -28,6 +28,20 @@ definitions:
     - password
     - username
     type: object
+  mock.RegisteredBody:
+    properties:
+      header_img:
+        type: string
+      nick_name:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
 info:
   contact: {}
   description: 基于Gin进行快速构建RESTful API 服务的脚手架
@@ -122,7 +136,7 @@ paths:
             $ref: '#/definitions/handler.Response'
       summary: 用户登录
       tags:
-      - mock
+      - mock用户
   /api/v1/mock/query:
     get:
       description: 查询参数，匹配 query?id=xxx
@@ -180,6 +194,29 @@ paths:
       summary: queryMap参数查询
       tags:
       - mock
+  /api/v1/mock/registered:
+    post:
+      parameters:
+      - description: 注册信息
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/mock.RegisteredBody'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handler.Response'
+      summary: 用户注册
+      tags:
+      - mock用户
   /api/v1/mock/uri/{id}:
     get:
       description: 路径参数，匹配 /uri/{id}
